Add Babel dependency to allow importing module code into jest tests. Add tests for wave 1 of mastermind

--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
   "dependencies": {
     "jest": "^28.1.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/node": "^7.16.0",
+    "@babel/preset-env": "^7.16.0"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.13.8"
+  }
 }
