--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "jest": "^28.1.0"
+    "jest": "^28.1.0",
+    "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
